--- a/lib/msal-core/package.json
+++ b/lib/msal-core/package.json
@@ -36,6 +36,8 @@
     "prepack": "npm run build"
   },
   "dependencies": {
+    "@types/base64-js": "^1.2.5",
+    "base64-js": "^1.3.1",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
