--- a/lib/msal-angular/package.json
+++ b/lib/msal-angular/package.json
@@ -24,14 +24,15 @@
     "node": ">=0.8.0"
   },
   "dependencies": {
-    "msal": "0.2.1",
+    "lodash": "^4.17.15",
+    "msal": "^1.1.3",
     "tslib": "1.7.1"
   },
   "devDependencies": {
     "@angular/common": "^4.3.0",
     "@angular/compiler": "~4.3.0",
     "@angular/compiler-cli": "4.3.0",
-    "@angular/core": "^4.3.0",
+    "@angular/core": "^4.4.7",
     "@angular/platform-browser": "^4.3.0",
     "@angular/platform-browser-dynamic": "~4.3.0",
     "@angular/router": "^4.3.0",
